--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,22 +4,60 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#2D2F31"
+    android:background="@color/colorPrimary"
     tools:context=".MainActivity">
+
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/principal_logoH"
+        android:background="@color/colorPrimaryDark"
+        app:layout_anchorGravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
+
+        <ImageView
+            android:id="@+id/pawPet"
+            android:layout_width="@dimen/principal_logoW"
+            android:layout_height="@dimen/principal_logoH"
+            app:srcCompat="@drawable/logoakaappr"
+            tools:layout_editor_absoluteX="16dp"
+            app:tint="#FFFFFF" />
+
+        <TextView
+            android:id="@+id/appNombre"
+            android:layout_width="200dp"
+            android:layout_height="@dimen/principal_logoH"
+            android:layout_weight="1"
+            android:gravity="center_vertical|center_horizontal"
+            android:text="@string/app_name"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFFFF"
+            android:textSize="30sp"
+            android:textStyle="bold"/>
+
+
+    </androidx.appcompat.widget.Toolbar>
 
     <ImageButton
         android:id="@+id/imageButton"
         android:layout_width="150dp"
         android:layout_height="150dp"
+        android:background="@drawable/custom_button"
         android:contentDescription="@string/IB"
         android:onClick="MensajeReloj"
-        android:scaleType="fitStart"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.073"
+        app:layout_constraintHorizontal_bias="0.072"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.121"
+        app:layout_constraintVertical_bias="0.154"
         app:srcCompat="@mipmap/rel" />
 
     <ImageButton
@@ -28,7 +66,8 @@
         android:layout_height="150dp"
         android:contentDescription="@string/IB"
         android:onClick="MensajeInfo"
-        android:scaleType="fitStart"
+        android:scaleType="centerCrop"
+        android:background="@drawable/custom_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.967"
@@ -41,6 +80,7 @@
         android:id="@+id/imageButton4"
         android:layout_width="150dp"
         android:layout_height="150dp"
+        android:background="@drawable/custom_button"
         android:contentDescription="@string/IB"
         android:onClick="MensajeNotificaciones"
         android:scaleType="fitStart"
@@ -56,6 +96,7 @@
         android:id="@+id/imageButton3"
         android:layout_width="150dp"
         android:layout_height="150dp"
+        android:background="@drawable/custom_button"
         android:contentDescription="@string/IB"
         android:onClick="MensajeClima"
         android:scaleType="fitStart"
@@ -71,21 +112,23 @@
         android:id="@+id/imageButton2"
         android:layout_width="150dp"
         android:layout_height="150dp"
+        android:background="@drawable/custom_button"
         android:contentDescription="@string/IB"
         android:onClick="MensajeCalendario"
         android:scaleType="fitStart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.967"
+        app:layout_constraintHorizontal_bias="0.969"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.121"
+        app:layout_constraintVertical_bias="0.154"
         app:srcCompat="@mipmap/calendario" />
 
     <ImageButton
         android:id="@+id/imageButton5"
         android:layout_width="150dp"
         android:layout_height="150dp"
+        android:background="@drawable/custom_button"
         android:contentDescription="@string/IB"
         android:scaleType="fitStart"
         app:layout_constraintBottom_toBottomOf="parent"
