--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="#FFFFFF"
     tools:context=".MainActivity">
 
 
@@ -45,100 +45,94 @@
     </androidx.appcompat.widget.Toolbar>
 
     <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:background="@drawable/custom_button"
-        android:contentDescription="@string/IB"
-        android:onClick="MensajeReloj"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.072"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.154"
-        app:srcCompat="@mipmap/rel" />
-
-    <ImageButton
-        android:id="@+id/imageButton6"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:contentDescription="@string/IB"
-        android:onClick="MensajeInfo"
-        android:scaleType="centerCrop"
-        android:background="@drawable/custom_button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.967"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.97"
-        app:srcCompat="@mipmap/informacion" />
-
-    <ImageButton
         android:id="@+id/imageButton4"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:background="@drawable/custom_button"
+        android:background="@drawable/iconos_akanotificaci_n_02"
         android:contentDescription="@string/IB"
         android:onClick="MensajeNotificaciones"
         android:scaleType="fitStart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.967"
+        app:layout_constraintHorizontal_bias="0.938"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.543"
-        app:srcCompat="@mipmap/notificaciones" />
+        app:layout_constraintVertical_bias="0.557" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:background="@drawable/iconos_aka_reloj_02"
+        android:contentDescription="@string/IB"
+        android:onClick="MensajeReloj"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.042"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.168" />
 
     <ImageButton
         android:id="@+id/imageButton3"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:background="@drawable/custom_button"
+        android:background="@drawable/iconos_aka_clima_02"
         android:contentDescription="@string/IB"
         android:onClick="MensajeClima"
         android:scaleType="fitStart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/imageButton4"
-        app:layout_constraintHorizontal_bias="0.076"
+        app:layout_constraintHorizontal_bias="0.044"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.543"
-        app:srcCompat="@mipmap/cli" />
-
-    <ImageButton
-        android:id="@+id/imageButton2"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:background="@drawable/custom_button"
-        android:contentDescription="@string/IB"
-        android:onClick="MensajeCalendario"
-        android:scaleType="fitStart"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.969"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.154"
-        app:srcCompat="@mipmap/calendario" />
+        app:layout_constraintVertical_bias="0.557" />
 
     <ImageButton
         android:id="@+id/imageButton5"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:background="@drawable/custom_button"
+        android:background="@drawable/iconos_aka_bluetooth_02"
         android:contentDescription="@string/IB"
         android:scaleType="fitStart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.073"
+        app:layout_constraintHorizontal_bias="0.042"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.97"
-        app:showAsAction="always"
-        app:srcCompat="@mipmap/bluetooth" />
+        app:layout_constraintVertical_bias="0.984"
+        app:showAsAction="always" />
+
+    <ImageButton
+        android:id="@+id/imageButton6"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:background="@drawable/iconos_aka_informaci_n_02"
+        android:contentDescription="@string/IB"
+        android:onClick="MensajeInfo"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.938"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.984" />
+
+    <ImageButton
+        android:id="@+id/imageButton2"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:background="@drawable/iconos_aka_calendario_02"
+        android:contentDescription="@string/IB"
+        android:onClick="MensajeCalendario"
+        android:scaleType="fitStart"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.938"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.168" />
 
     <ProgressBar
         android:id="@+id/pbConnectBT"
