--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,68 +7,67 @@
     android:background="#FFFFFF"
     tools:context=".MainActivity">
 
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+    <LinearLayout
+        android:id="@+id/llMenu"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/principal_logoH"
-        android:background="@color/colorPrimaryDark"
-        app:layout_anchorGravity="center"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/pawPet"
-            android:layout_width="@dimen/principal_logoW"
-            android:layout_height="@dimen/principal_logoH"
-            app:srcCompat="@drawable/logoakaapp"
-            tools:layout_editor_absoluteX="16dp"
-            app:tint="#FFFFFF" />
+        <LinearLayout
+            android:id="@+id/llMenu2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/appNombre"
-            android:layout_width="200dp"
-            android:layout_height="@dimen/principal_logoH"
-            android:layout_weight="1"
-            android:gravity="center_vertical|center_horizontal"
-            android:text="@string/app_name"
-            android:textColor="#FFFFFF"
-            android:textColorHint="#FFFFFF"
-            android:textSize="30sp"
-            android:textStyle="bold"/>
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/principal_logoH"
+                android:background="@color/colorPrimaryDark"
+                app:layout_anchorGravity="center">
+
+                <ImageView
+                    android:id="@+id/pawPet"
+                    android:layout_width="@dimen/principal_logoW"
+                    android:layout_height="@dimen/principal_logoH"
+                    app:srcCompat="@drawable/logoakaapp"
+                    app:tint="#FFFFFF"
+                    tools:layout_editor_absoluteX="16dp" />
+
+                <TextView
+                    android:id="@+id/appNombre"
+                    android:layout_width="200dp"
+                    android:layout_height="@dimen/principal_logoH"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical|center_horizontal"
+                    android:text="@string/app_name"
+                    android:textColor="#FFFFFF"
+                    android:textColorHint="#FFFFFF"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
 
 
-    </androidx.appcompat.widget.Toolbar>
+            </androidx.appcompat.widget.Toolbar>
+        </LinearLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvMenuPrincial"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.143">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvMenuPrincial"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
 
-    </androidx.recyclerview.widget.RecyclerView>
+        </androidx.recyclerview.widget.RecyclerView>
 
-    <ProgressBar
-        android:id="@+id/pbConnectBT"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.708" />
-
+        <ProgressBar
+            android:id="@+id/pbConnectBT"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
+
