--- a/app/src/main/res/menu/menu_figuras.xml
+++ b/app/src/main/res/menu/menu_figuras.xml
@@ -6,7 +6,8 @@
     </item>
     <item
         android:id="@+id/mpFiguras"
-        android:title="Figuras">
+        android:title="Figuras"
+        >
     </item>
     <item
         android:id="@+id/mpCubo"
