--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -108,6 +108,65 @@
                  />
 
     </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/llMenu3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:gravity="center">
+
+        <EditText
+            android:id="@+id/etHoras"
+            android:layout_width="73dp"
+            android:layout_height="43dp"
+            android:ems="10"
+            android:hint="Horas"
+            android:inputType="number" />
+
+        <TextView
+            android:id="@+id/tvPuntos"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=":"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/etMin"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:ems="10"
+            android:hint="Min"
+            android:inputType="number" />
+
+        <TextView
+            android:id="@+id/tvPuntos2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=":"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/etSegundos"
+            android:layout_width="49dp"
+            android:layout_height="42dp"
+            android:ems="10"
+            android:hint="Seg"
+            android:inputType="number" />
+    </LinearLayout>
+        <TextView
+            android:id="@+id/tvTempo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="00:00:00"
+            android:textSize="34sp"
+            android:layout_gravity="center"/>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
 
