--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -113,13 +113,13 @@
 
         <EditText
             android:id="@+id/etHoras"
-            android:layout_width="73dp"
-            android:layout_height="43dp"
+            android:layout_width="31dp"
+            android:layout_height="40dp"
             android:ems="10"
-            android:textColorHint="#000000"
+            android:hint="00"
+            android:inputType="number"
             android:textColor="#000000"
-            android:hint="Horas"
-            android:inputType="number" />
+            android:textColorHint="#000000" />
 
         <TextView
             android:id="@+id/tvPuntos"
@@ -137,7 +137,7 @@
             android:ems="10"
             android:textColorHint="#000000"
             android:textColor="#000000"
-            android:hint="Min"
+            android:hint="00"
             android:inputType="number" />
 
         <TextView
@@ -156,7 +156,7 @@
             android:ems="10"
             android:textColorHint="#000000"
             android:textColor="#000000"
-            android:hint="Seg"
+            android:hint="00"
 
             android:inputType="number" />
     </LinearLayout>
