--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,35 +24,35 @@
             android:layout_height="wrap_content"
             android:visibility="gone" />
 
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimaryDark"
+            app:layout_anchorGravity="center">
+
+            <ImageView
+                android:id="@+id/pawPet"
+                android:layout_width="@dimen/principal_logoW"
                 android:layout_height="@dimen/principal_logoH"
-                android:background="@color/colorPrimaryDark"
-                app:layout_anchorGravity="center">
+                app:srcCompat="@drawable/logoakaapp"
+                app:tint="#FFFFFF"
+                tools:layout_editor_absoluteX="16dp" />
 
-                <ImageView
-                    android:id="@+id/pawPet"
-                    android:layout_width="@dimen/principal_logoW"
-                    android:layout_height="@dimen/principal_logoH"
-                    app:srcCompat="@drawable/logoakaapp"
-                    app:tint="#FFFFFF"
-                    tools:layout_editor_absoluteX="16dp" />
-
-                <TextView
-                    android:id="@+id/appNombre"
-                    android:layout_width="200dp"
-                    android:layout_height="@dimen/principal_logoH"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical|center_horizontal"
-                    android:text="@string/app_name"
-                    android:textColor="#FFFFFF"
-                    android:textColorHint="#FFFFFF"
-                    android:textSize="30sp"
-                    android:textStyle="bold" />
+            <TextView
+                android:id="@+id/appNombre"
+                android:layout_width="200dp"
+                android:layout_height="@dimen/principal_logoH"
+                android:layout_weight="1"
+                android:gravity="center_vertical|center_horizontal"
+                android:text="@string/app_name"
+                android:textColor="#FFFFFF"
+                android:textColorHint="#FFFFFF"
+                android:textSize="30sp"
+                android:textStyle="bold" />
 
 
-            </androidx.appcompat.widget.Toolbar>
+        </androidx.appcompat.widget.Toolbar>
 
 
         <LinearLayout
